fix: junto con @JocoolQ se ajustan validaciones de transaccion #3

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,14 @@
 appname = movimientos_contables_mid
-httpport = 8080
+httpport = ${MOVIMIENTOS_CONTABLES_MID_HTTPPORT}
 runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-sqlconn = 
+
+ConsecutivosCrudService = ${CONSECUTIVOS_CRUD_SERVICE}
+MovimientosContablesCrudService = ${MOVIMIENTOS_CONTABLES_CRUD_SERVICE}
+TercerosCrudService = ${TERCEROS_CRUD_SERVICE}
+ParametrosCrudService = ${PARAMETROS_CRUD_SERVICE}
+CuentasContablesCrudService = ${CUENTAS_CONTABLES_CRUD_SERVICE}
+
+
