devops: junto con @JocoolQ se agregan archivos de despliegue #4

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,7 @@
 appname = movimientos_contables_mid
 httpport = ${MOVIMIENTOS_CONTABLES_MID_HTTP_PORT}
-runmode = dev
+#runmode = dev
+runmode = ${MOVIMIENTOS_CONTABLES_MID_RUN_MODE}
 autorender = false
 copyrequestbody = true
 EnableDocs = true
