fix: `go mod init` && `go get ./...` && `go mod tidy`

--- a/.drone.yml
+++ b/.drone.yml
@@ -50,8 +50,7 @@ steps:
 - name: go_build
   image: golang:1.14
   commands:
-  - go mod init
-  - go get -t
+  - go get
   - GOOS=linux GOARCH=amd64 go build -o main
   when:
     branch:
@@ -80,7 +79,6 @@ steps:
     - develop
     - feature/*
     - release/*
-   
     event:
     - push
 
